优惠券订单 item监听 返回键监听

--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_my_order.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_my_order.xml
@@ -19,11 +19,11 @@
         android:id="@+id/tablayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#E0E0E0"
-        app:tabIndicatorColor="@color/colorAccent"
+        android:background="@color/colorWhite"
+        app:tabIndicatorColor="@color/colorOrange"
         app:tabMode="fixed"
-        app:tabSelectedTextColor="@color/colorWhite"
-        app:tabTextColor="@android:color/black"
+        app:tabSelectedTextColor="@color/colorOrange"
+        app:tabTextColor="#E0E0E0"
         app:tabIndicatorHeight="5dp"
         app:tabTextAppearance="@style/TabStyle"
         />
