--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_pay_code_finish.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_pay_code_finish.xml
@@ -35,6 +35,19 @@
             app:srcCompat="@color/colorAccent" />
 
         <TextView
+            android:id="@+id/textView_merchant_name_paying_finish"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:text="商家名"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/rv_finish_points"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
