--- a/APP/Android/PointsLeague/app/src/main/res/layout/item_points_record_parent.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/item_points_record_parent.xml
@@ -11,6 +11,12 @@
 
 
 
+    <TextView
+        android:id="@+id/textView_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+         />
+
 
     <TextView
         android:id="@+id/textView_exchange_date"
