--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_all_card.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_all_card.xml
@@ -29,9 +29,10 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:id="@+id/floatingActionButton_all_card"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_margin="20dp"
         android:clickable="true"
-        app:srcCompat="@android:drawable/ic_menu_add" />
+        app:backgroundTint="@color/colorOrange"
+        app:srcCompat="@drawable/ic_add_black_24dp" />
 </RelativeLayout>
