--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_points_exchange_record.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_points_exchange_record.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
-        android:background="@color/space_background_color"
+        android:background="@color/colorWhite"
         android:paddingTop="5dp">
     </android.support.v7.widget.RecyclerView>
 
