--- a/APP/Android/PointsLeague/app/src/main/res/layout/fragment_mall.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/fragment_mall.xml
@@ -5,11 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".MallFragment">
 
-    <TextView
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Mall"
-        android:textSize="36sp"/>
+    <WebView
+        android:id="@+id/webView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
