--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_expandlist.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_expandlist.xml
@@ -4,6 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <com.citiexchangeplatform.pointsleague.TitleBar
+        android:id="@+id/title_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
