--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_pay_code_finish.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_pay_code_finish.xml
@@ -22,8 +22,8 @@
 
         <ImageView
             android:id="@+id/imageView_scan_finish_business"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:scaleType="fitCenter"
