--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_detail_find_pay.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_detail_find_pay.xml
@@ -5,15 +5,20 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".DetailFindPayActivity">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_detail_find_pay"
+    <!--<android.support.v7.widget.Toolbar-->
+        <!--android:id="@+id/toolbar_detail_find_pay"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:background="?attr/colorPrimary"-->
+        <!--android:minHeight="?attr/actionBarSize"-->
+        <!--android:theme="?attr/actionBarTheme" />-->
+
+    <com.citiexchangeplatform.pointsleague.TitleBar
+        android:id="@+id/title_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/textView_name_detail_find_pay"
