--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_bind_card.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_bind_card.xml
@@ -2,12 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingTop="50dp">
+    android:layout_height="match_parent">
+
+    <com.citiexchangeplatform.pointsleague.TitleBar
+        android:id="@+id/title_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp">
         <TextView
             android:layout_gravity="center"
             android:layout_width="wrap_content"
